# Project Configurations #
[project]
# Project Details
name = "tiledbobjects"
version = "0.1.0"
description = "A template package for creating python projects."
readme = "README.rst"
classifiers = ["Development Status :: 1 - Planning"]

# Staff
authors = [{name = "Anthony Fong", email = ""}]
maintainers = [{name = "Anthony Fong", email = ""}]

# License
license = "MIT"
license-files = ["LICENSE"]

# Package Dependencies
requires-python = ">=3.14"
dependencies = []

# URLs
[project.urls]
homepage = "https://github.com/AnthonyTechnologies/python-tiledbobjects"
repository = "https://github.com/AnthonyTechnologies/python-tiledbobjects"
documentation = "https://python-tiledbobjects.readthedocs.io"
changelog = "https://github.com/AnthonyTechnologies/python-tiledbobjects/releases"

# Optional Dependencies
[project.optional-dependencies]
dev = [
    "coverage[toml]>=6.2",
    "click>=8.0.3",
    "furo>=2021.11.12",
    "isort>=5.10.1",
    "mypy>=0.930",
    "nox>=2025.5.1",
    "pep8-naming>=0.12.1",
    "pip-audit>=2.10.0",
    "pre-commit>=2.16.0",
    "pre-commit-hooks>=4.1.0",
    "Pygments>=2.10.0",
    "pytest>=6.2.5",
    "pytest-asyncio>=1.2.0",
    "pyupgrade>=2.29.1",
    "ruff>=0.14.14",
    "sphinx>=4.3.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-click>=3.0.2",
    "sphinx-rtd-theme>=3.0.2",
    "typeguard>=2.13.3",
    "xdoctest[colors]>=0.15.10",
    "myst-parser>=0.16.1",
]
jupyter = [
    "jupyter>=1.1.1",
]

# Project Build
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# Development Configurations
# Ruff
[tool.ruff]
preview = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "examples",  # Has a separate lint
    "tests",  # Has a separate lint
    "tutorials",  # Has a separate lint
    "docs",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "RET",
    "PTH",
    "N",
    "E",
    "W",
    "DOC",
    "D",
    "F",
    "UP",
    "RUF",
]
ignore = [
    "ANN401",  # Disallow typing.Any
    "ASYNC109", # Disallow defining timeouts in functions
    "S101",  # Disallow assert
    "S301",  # Disallow pickle
    "S403",  # Disallow pickle, pickle.load, pickle.loads
    "B024",  # Disallow abstract base class without abstract methods
    "B027",  # Empty methods MUST be abstract methods
    "A003",  # Disallow class attribute shadowing builtins
    "A005",  # Disallow class attribute shadowing module-level variables
    "RET505",  # Disallow unnecessary else after return statement
    "N812",  # Lowercase imports must be casted "as" lowercase as well
    "COM812",  # Trailing comma missing (the formatter will handle this)
    "D205",  # 1 blank line required between summary line and description
    "D401",  # Disallow imperative mood in docstring
    "D415",  # The first line must end with a period
    "F403",  # Disallow wildcard imports (from module import *)
    "F405",  # Disallow names defined from star imports
    "RUF012",  # Multable class attriubes must be annotated with ClassVar
    "RUF067",  # Disallow content in __init__ (false positive for metadata)
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
indent-style = "space"  # Python convention, use spaces rather than tabs
line-ending = "auto"  # Detect Line ending
skip-magic-trailing-comma = false  # Comma used at the end of multi-line lists
quote-style = "double"  # Like C++ double quotes for strings and single for char
docstring-code-format = false  # Format code in docstrings
docstring-code-line-length = "dynamic"

# isort [Import Sorting]
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
import_heading_stdlib = "Standard Libraries #"
import_heading_thirdparty = "Third-Party Packages #"
import_heading_firstparty = "Source Packages #"
import_heading_localfolder = "Local Packages #"


# MYPY
[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
exclude = ["docs/"]


# Pytest
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose"
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = ["docs", "*.egg-info", ".nox", ".git"]


# Coverage
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src/tiledbobjects"]
omit = ["*/header.py", "src/tiledbobjects/testsuite/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100
